Added telemetry and upgraded code